# ComfyUI-CometChat

./: .comfyignore  .gitignore  LICENSE  NOTICE  README.md  __init__.py  comet_chat_plugin.py  pyproject.toml
.github/workflows/: publish-to-comfy-registry.yml
web/: cc_core.js  cc_selection_assistant.js  cc_styles.js  cc_ui.js  cc_utils.js  comet_chat_plugin.js
